<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt.pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pt_name"
        android:layout_marginBottom="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        />

    <ImageView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_location_pin_24"
        android:layout_below="@+id/txt.pt"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@+id/txt.pt"
        app:tint="@color/orange" />

    <TextView
        android:id="@+id/txt.location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="15sp"
        android:layout_below="@+id/txt.pt"
        android:layout_toRightOf="@+id/location"
        android:layout_margin="10dp"
        />

    <Button
        android:id="@+id/txt.jadwal_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informasi"
        android:textColor="@color/abu.abu"
        android:textSize="14.2sp"
        android:backgroundTint="@color/white"
        app:strokeWidth="2dp"
        app:strokeColor="@color/orange"
        android:layout_below="@+id/location"
        android:layout_marginTop="40dp"
        android:layout_alignStart="@+id/txt.pt"
        android:layout_centerHorizontal="true"
        app:cornerRadius="15dp"
        android:layout_alignEnd="@+id/txt.pt"
        />

    <Button
        android:id="@+id/btn.katalog"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:cornerRadius="15dp"
        android:layout_below="@+id/txt.jadwal_update"
        android:layout_marginTop="60dp"
        android:layout_alignStart="@+id/txt.pt"
        android:backgroundTint="@color/white"
        android:elevation="5dp"
        android:translationZ="10dp"
        android:stateListAnimator="@null"
        android:drawableTop="@drawable/baseline_manage_search_24"
        android:drawableTint="@color/orange"
        android:text="@string/tender_katalog"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:padding="15dp"
        />

    <Button
        android:id="@+id/btn.tersimpan"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:cornerRadius="15dp"
        android:layout_below="@+id/txt.jadwal_update"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_alignEnd="@+id/txt.pt"
        android:layout_toRightOf="@+id/btn.katalog"
        android:backgroundTint="@color/white"
        android:elevation="5dp"
        android:translationZ="10dp"
        android:stateListAnimator="@null"
        android:drawableTop="@drawable/baseline_bookmark_added_24"
        android:drawableTint="@color/orange"
        android:text="@string/tender_tersimpan"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:padding="15dp"
        />

    <Button
        android:id="@+id/btn.laporan"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:cornerRadius="15dp"
        android:layout_below="@+id/btn.katalog"
        android:layout_marginTop="20dp"
        android:layout_alignStart="@+id/txt.pt"
        android:backgroundTint="@color/white"
        android:elevation="5dp"
        android:translationZ="10dp"
        android:stateListAnimator="@null"
        android:drawableTop="@drawable/baseline_bar_chart_24"
        android:drawableTint="@color/orange"
        android:text="@string/laporan"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:padding="15dp"
        />

    <Button
        android:id="@+id/btn.setting"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:cornerRadius="15dp"
        android:layout_below="@+id/btn.katalog"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/btn.laporan"
        android:layout_alignEnd="@+id/txt.pt"
        android:backgroundTint="@color/white"
        android:elevation="5dp"
        android:translationZ="10dp"
        android:stateListAnimator="@null"
        android:drawableTop="@drawable/baseline_settings_24"
        android:drawableTint="@color/orange"
        android:text="@string/setting"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:padding="15dp"
        />
</RelativeLayout>